--- a/jslectureplanner.sty
+++ b/jslectureplanner.sty
@@ -83,6 +83,28 @@
 
 
 %
+% COUNTERS
+%
+\newcounter{sesunit}
+\newcounter{dateratio}
+\setcounter{dateratio}{1}
+\newcounter{cancellations}
+\newcounter{snum}
+\newcounter{blocks}
+\newcounter{fbreaks}
+\newcounter{lecinterval}
+\setcounter{lecinterval}{7}
+\newcounter{sesoffset}
+\newcounter{autooffset}
+\newcounter{autooffsettrigger}
+\newcounter{autooffsetcounter}
+\newcounter{breakunits}
+\newcounter{loopcounter}
+\newcounter{adjsession}
+\newcounter{sestopic}
+
+
+%
 % STRINGS
 %
 
@@ -141,27 +163,6 @@
 \newcommand*\lecprogram{Programm}
 % Program list indentation
 \newcommand*\lecprogramlistindent{\textbf{88.\,88.}}
-
-
-%
-% COUNTERS
-%
-\newcounter{sesunit}
-\newcounter{dateratio}
-\setcounter{dateratio}{1}
-\newcounter{cancellations}
-\newcounter{snum}
-\newcounter{blocks}
-\newcounter{fbreaks}
-\newcounter{lecinterval}
-\setcounter{lecinterval}{7}
-\newcounter{sesoffset}
-\newcounter{autooffset}
-\newcounter{autooffsettrigger}
-\newcounter{autooffsetcounter}
-\newcounter{breakunits}
-\newcounter{loopcounter}
-\newcounter{adjsession}
 
 
 %
